修复了卡组中卡牌显示变形的问题。增加了左下角的预备卡池角标。

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/finish.css">
 	<link rel="stylesheet" type="text/css" href="css/import.css">
 	<link rel="stylesheet" type="text/css" href="css/progressbar.css">
+	<link rel="stylesheet" type="text/css" href="css/reserved.css">
     <script src="script/fetch.js" defer></script>
     <script src="script/loadCards.js" defer></script>
     <script src="script/setFilters.js" defer></script>
@@ -123,7 +124,7 @@
         </div>
 	</div>
 	
-	<div class="modal" id="modal"></div>
+	<div class="modal" id="modal" style="display: block;"></div>
 	
 	<div class="sidebar" id="sidebar">
 		<div class="sidebar-content">
