使加载进度条居中了。为库js文件应用了CDN。

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <script src="script/finish.js" defer></script>
     <script src="script/import.js" defer></script>
     <script src="script/deck.js" defer></script>
-    <script src="script/html2canvas.min.js" defer></script>
-    <script src="script/echarts.min.js" defer></script>
+    <script src="https://testingcf.jsdelivr.net/gh/ohminecraftlauncher/ohminecraftlauncher.github.io@master/script/html2canvas.min.js" defer></script>
+    <script src="https://testingcf.jsdelivr.net/gh/ohminecraftlauncher/ohminecraftlauncher.github.io@master/script/echarts.min.js" defer></script>
     <script src="script/data.js" defer></script>
     <script src="script/deck_show.js" defer></script>
 </head>
