现在清空筛选器会清空属性复选框了。优化了属性筛选逻辑，现在情报、重甲和老兵相关是或关系了

--- a/index.html
+++ b/index.html
@@ -136,28 +136,28 @@
         <span class="close-btn" id="closeBtn3">&times;</span>
             <div class="modal-body">
                 <h2>属性筛选</h2>
-				<input name="blitz" type="checkbox" onclick="onAttributesClicked(this)">闪击
-				<input name="smokescreen" type="checkbox" onclick="onAttributesClicked(this)">烟幕
-				<input name="fury" type="checkbox" onclick="onAttributesClicked(this)">奋战
-				<input name="salvage" type="checkbox" onclick="onAttributesClicked(this)">收缴
-				<input name="pincer" type="checkbox" onclick="onAttributesClicked(this)">钳击
-				<input name="guard" type="checkbox" onclick="onAttributesClicked(this)">守护
+				<input class="attr_Input" name="blitz" type="checkbox" onclick="onAttributesClicked(this)">闪击
+				<input class="attr_Input" name="smokescreen" type="checkbox" onclick="onAttributesClicked(this)">烟幕
+				<input class="attr_Input" name="fury" type="checkbox" onclick="onAttributesClicked(this)">奋战
+				<input class="attr_Input" name="salvage" type="checkbox" onclick="onAttributesClicked(this)">收缴
+				<input class="attr_Input" name="pincer" type="checkbox" onclick="onAttributesClicked(this)">钳击
+				<input class="attr_Input" name="guard" type="checkbox" onclick="onAttributesClicked(this)">守护
 				<br>
-				<input name="mobilize" type="checkbox" onclick="onAttributesClicked(this)">动员
-				<input name="alpine" type="checkbox" onclick="onAttributesClicked(this)">山地
-				<input name="shock" type="checkbox" onclick="onAttributesClicked(this)">冲击
-				<input name="intel1" type="checkbox" onclick="onAttributesClicked(this)">情报1
-				<input name="intel2" type="checkbox" onclick="onAttributesClicked(this)">情报2
+				<input class="attr_Input" name="mobilize" type="checkbox" onclick="onAttributesClicked(this)">动员
+				<input class="attr_Input" name="alpine" type="checkbox" onclick="onAttributesClicked(this)">山地
+				<input class="attr_Input" name="shock" type="checkbox" onclick="onAttributesClicked(this)">冲击
+				<input class="attr_Input" name="intel1" type="checkbox" onclick="onAttributesClicked(this)">情报1
+				<input class="attr_Input" name="intel2" type="checkbox" onclick="onAttributesClicked(this)">情报2
 				<br>
-				<input name="intel3" type="checkbox" onclick="onAttributesClicked(this)">情报3
-				<input name="ambush" type="checkbox" onclick="onAttributesClicked(this)">伏击
-				<input name="covert" type="checkbox" onclick="onAttributesClicked(this)">隐蔽
-				<input name="heavyArmor1" type="checkbox" onclick="onAttributesClicked(this)">重甲1
-				<input name="heavyArmor2" type="checkbox" onclick="onAttributesClicked(this)">重甲2
+				<input class="attr_Input" name="intel3" type="checkbox" onclick="onAttributesClicked(this)">情报3
+				<input class="attr_Input" name="ambush" type="checkbox" onclick="onAttributesClicked(this)">伏击
+				<input class="attr_Input" name="covert" type="checkbox" onclick="onAttributesClicked(this)">隐蔽
+				<input class="attr_Input" name="heavyArmor1" type="checkbox" onclick="onAttributesClicked(this)">重甲1
+				<input class="attr_Input" name="heavyArmor2" type="checkbox" onclick="onAttributesClicked(this)">重甲2
 				<br>
-				<input name="heavyArmor3" type="checkbox" onclick="onAttributesClicked(this)">重甲3
-				<input name="BecomesVeteran" type="checkbox" onclick="onAttributesClicked(this)">可以升为老兵
-				<input name="VeteranOf" type="checkbox" onclick="onAttributesClicked(this)">老兵
+				<input class="attr_Input" name="heavyArmor3" type="checkbox" onclick="onAttributesClicked(this)">重甲3
+				<input class="attr_Input" name="BecomesVeteran" type="checkbox" onclick="onAttributesClicked(this)">可以升为老兵
+				<input class="attr_Input" name="VeteranOf" type="checkbox" onclick="onAttributesClicked(this)">老兵
             </div>
         </div>
 	</div>
