优化了放大镜逻辑。现在移动端使用放大镜会有放大效果，优化了移动端的使用体验

--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
 					</div>
 					<div id="zoom-main-text" style="text-align: left;">
 					</div>
+					<div id="zoom-main-cre-img">
+					</div>
 				</div>
 				<div id="zoom-json" class="zoom-page">
 					<pre>
