修复了一些因代码逻辑问题造成的bug。为了修复bug，现在在配卡组之前必须先选择主盟国。现在可以筛选国家了。

--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
           <option value="8">波兰</option>
           <option value="9">芬兰</option>
         </select>
+		<br>
+        <span>国家：</span>
+        <select id="Ally" onchange="onFacChanged(this.value)">
+          <option value="0">---</option>
+          <option value="1">德国</option>
+          <option value="2">英国</option>
+          <option value="3">日本</option>
+          <option value="4">苏联</option>
+          <option value="5">美国</option>
+          <option value="6">法国</option>
+          <option value="7">意大利</option>
+          <option value="8">波兰</option>
+          <option value="9">芬兰</option>
+        </select>
         <span>花费：</span>
 		<input id="ReditsInput" type="number" min="-1" max="20" onchange="onReditsChanged(this.value)"/>
         <span>卡池：</span>
