修复了一个小bug。增加了CDN切换逻辑

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </select>
 		<br>
         <span>国家：</span>
-        <select id="Ally" onchange="onFacChanged(this.value)">
+        <select id="Fac" onchange="onFacChanged(this.value)">
           <option value="0">---</option>
           <option value="1">德国</option>
           <option value="2">英国</option>
@@ -332,7 +332,7 @@
 	
 	<div id="loading-container">
 		<div id="progress-bar"></div>
-		<div id="loading-text">正在加载 Cards.json ...</div>
+		<div id="loading-text">检查CDN...</div>
 	</div>
 	
     <div id="temporary-message"></div>
