--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 	
 	<div id="loading-container">
 		<div id="progress-bar"></div>
-		<div id="loading-text">检查CDN...</div>
+		<div id="loading-text">检测CDN...</div>
 	</div>
 	
     <div id="temporary-message"></div>
