增加了部分CDN。现在搜索可以搜索导入id了

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <script src="script/finish.js" defer></script>
     <script src="script/import.js" defer></script>
     <script src="script/deck.js" defer></script>
-    <script src="https://testingcf.jsdelivr.net/gh/ohminecraftlauncher/ohminecraftlauncher.github.io@master/script/html2canvas.min.js" defer></script>
-    <script src="https://testingcf.jsdelivr.net/gh/ohminecraftlauncher/ohminecraftlauncher.github.io@master/script/echarts.min.js" defer></script>
+    <script src="https://cdn.jsdmirror.com/gh/ohminecraftlauncher/ohminecraftlauncher.github.io@master/script/html2canvas.min.js" defer></script>
+    <script src="https://cdn.jsdmirror.com/gh/ohminecraftlauncher/ohminecraftlauncher.github.io@master/script/echarts.min.js" defer></script>
     <script src="script/data.js" defer></script>
     <script src="highlight/highlight.min.js" defer></script>
     <script src="script/zoom.js" defer></script>
