增加了导出卡组图片时取消预备下标的功能。更新了Cards.json的文件大小

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 			<br>
 			<span>CDN：</span>
 			<select id="CDN_Sel" onchange="onCDNSelChanged(this.value)" style="margin-bottom: 5px">
-			  <option value="0" selected>jsd.vxo.im</option>
-			  <option value="1">cdn.smartcis.cn</option>
+			  <option value="0">jsd.vxo.im</option>
+			  <option value="1" selected>cdn.smartcis.cn</option>
 			  <option value="2">cdn.bili33.top</option>
 			  <option value="3">gcore.jsdelivr.net</option>
 			  <option value="4">testingcf.jsdelivr.net</option>
