--- a/DIY/index.html
+++ b/DIY/index.html
@@ -13,7 +13,7 @@
 		<div id="main">
 			<div id="picture" class="picture-unit"></div>
 			<div id="title-body"></div>
-			<img id="body" src="images/body/底-单位.png" alt="底"/>
+			<img id="body" src="https://cdn.jsdmirror.com/gh/ohminecraftlauncher/ohminecraftlauncher.github.io/DIY/images/body/底-单位.png" alt="底"/>
 			<img id="K" class="K-1" src="images/body/K.png" alt="K"/>
 			<div id="type-board" class="type-board-unit" onclick="onTypeClick()">
 				<img id="type" src="images/type/步兵.png" alt="类型"/>
