--- a/DIY/index.html
+++ b/DIY/index.html
@@ -22,8 +22,7 @@
 			<img id="set" src="images/set/基础.png" alt="套装" onclick="onSetClick()"/>
 			<img id="faction" src="images/faction/germany.png" alt="国家" onclick="onFactionClick()"/>
 			<div id="picture-select" onclick="onPictureClick()"></div>
-			<div id="b-text" class="text-unit" contenteditable="true">
-			</div>
+			<div id="b-text" class="text-unit" contenteditable="true"></div>
 			<div id="kredit" contenteditable="true" oninput="onKreditInput()"></div>
 			<div id="opredit" class="opredit-1" contenteditable="true" oninput="onOpeditInput()"></div>
 			<div id="attack" class="attack-1" contenteditable="true" oninput="onAttackInput()"></div>
