--- a/DIY/index.html
+++ b/DIY/index.html
@@ -22,7 +22,9 @@
 			</div>
 			<img id="rarity" src="images/rarity/普通.png" alt="稀有度" onclick="onRarityClick()"/>
 			<img id="set" src="images/set/基础.png" alt="套装" onclick="onSetClick()"/>
-			<img id="faction" src="images/faction/germany.png" alt="国家" onclick="onFactionClick()"/>
+			<div id="faction-container">
+				<img id="faction" src="images/faction/germany.png" alt="国家" onclick="onFactionClick()"/>
+			</div>
 			<div id="picture-select" onclick="onPictureClick()"></div>
 			<div id="b-text" class="text-unit" contenteditable="true"></div>
 			<div id="kredit" contenteditable="true" oninput="onKreditInput()"></div>
