增加了访问次数监测

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="sentinel"></div>  <!-- 哨兵移到网格外 -->
     </div>
     <div class="fixed-top" id="fixed-top">
-		<h1>简易Kards卡组编辑器<a href="javascript:void(0)" onclick="onTitleVerClick()">v1.4.4</a></h1>
+		<h1>简易Kards卡组编辑器<a href="javascript:void(0)" onclick="onTitleVerClick()">v1.4.5</a></h1>
         <span>主国：</span>
         <select id="Main" onchange="onMainChanged(this.value)">
           <option value="0">---</option>
@@ -218,6 +218,10 @@
             <div class="modal-body">
 				<h2>更新日志</h2>
 				<div style="text-align: left;">
+					<h4>2026.02.02 v1.4.5</h4>
+					<div style="margin-left: 20px;">
+						<span>添加了 访问次数监测 功能</span>
+					</div>
 					<h4>2026.01.31 v1.4.4</h4>
 					<div style="margin-left: 20px;">
 						<span>更新了 1月平衡补丁</span><br>
@@ -360,6 +364,10 @@
 						</div>
 					</div>
 				</div>
+				<br>
+				<span>---------------</span><br>
+				<span>自 2026.02.02 以来</span>
+				<div class="use-times"><span style="display: inline;">· 本网站已被访问</span><img style="display: inline; margin-top: 7px;" src="https://w.saobby.com/w/e820bw5p"><span style="display: inline;">次 ·</span></div>
             </div>
         </div>
 	</div>
