现在可以根据卡牌ID搜索卡牌。修复了更新日志中v1.4.6版本日期错误的问题

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="sentinel"></div>  <!-- 哨兵移到网格外 -->
     </div>
     <div class="fixed-top" id="fixed-top">
-		<h1>简易Kards卡组编辑器<a href="javascript:void(0)" onclick="onTitleVerClick()">v1.4.6</a></h1>
+		<h1>简易Kards卡组编辑器<a href="javascript:void(0)" onclick="onTitleVerClick()">v1.4.7</a></h1>
         <span>主国：</span>
         <select id="Main" onchange="onMainChanged(this.value)">
           <option value="0">---</option>
@@ -220,7 +220,12 @@
             <div class="modal-body">
 				<h2>更新日志</h2>
 				<div style="text-align: left;">
-					<h4>2026.02.02 v1.4.6</h4>
+					<h4>2026.02.07 v1.4.7</h4>
+					<div style="margin-left: 20px;">
+						<span>添加了 根据卡牌id搜索卡牌 功能</span>
+						<span>修复了 更新日志中 v1.4.6 版本日期错误的bug</span>
+					</div>
+					<h4>2026.02.05 v1.4.6</h4>
 					<div style="margin-left: 20px;">
 						<span>添加了 向上收回筛选器和标题 功能，优化移动端使用体验</span>
 						<div style="margin-left: 20px;">
