修复更新日志中v1.4.7的一个换行问题

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				<div style="text-align: left;">
 					<h4>2026.02.07 v1.4.7</h4>
 					<div style="margin-left: 20px;">
-						<span>添加了 根据卡牌id搜索卡牌 功能</span>
+						<span>添加了 根据卡牌id搜索卡牌 功能</span><br>
 						<span>修复了 更新日志中 v1.4.6 版本日期错误的bug</span>
 					</div>
 					<h4>2026.02.05 v1.4.6</h4>
